--- a/src/config.json
+++ b/src/config.json
@@ -10,7 +10,7 @@
         "main": "#f50057"
       },
       "background": {
-        "default": "#310000",
+        "default": "#A15602",
         "paper": "#731010"
       },
       "text": {
